--- a/sass/blocks/button.scss
+++ b/sass/blocks/button.scss
@@ -9,20 +9,21 @@
   text-align: center;
   font-size: 1em; // уточнять
   font-family: inherit;
-  //line-height: 400; // уточнять
   text-decoration: none;
   text-transform: uppercase;
   color: #ffffff;
-  border-radius: 3px; // Уточнять
-  border: 1px solid #ffffff; // Уточнять
-  background-color: transparent; // Уточнять
+  border-radius: 4px;
+  border: 1px solid #ffffff;
+  background-color: transparent;
   background-image: none;
   cursor: pointer;
+  transition: 0.25s;
+  font-weight: 600;
 
   &:focus,
   &:hover {
     background-color: $accent-color;
-    border: 1px solid $accent-color; // Уточнять
+    border: 1px solid $accent-color;
   }
 
   &:active {
@@ -44,4 +45,14 @@
   border-bottom-left-radius: 0;
   border-top-left-radius: 0;
   flex-grow: 1;
+}
+
+.button--destinations {
+  color: #343434;
+  border: 1px solid #bdbdbd;
+
+  &:hover {
+    color: #ffffff;
+    transition: 0.25s;
+  }
 }
