--- a/sass/blocks/main-nav.scss
+++ b/sass/blocks/main-nav.scss
@@ -27,9 +27,12 @@
   line-height: 22px;
   text-transform: uppercase;
   color: #ffffff;
+  transition: 0.25s ease;
+  padding: 20px 0;
 
   &:hover {
-    border-bottom: 1px solid $accent-color;
+    border-bottom: 2px solid $accent-color;
+    padding: 7px 0;
   }
 }
 
