--- a/sass/blocks/typo.scss
+++ b/sass/blocks/typo.scss
@@ -17,6 +17,8 @@
 }
 
 body {
-  font-family: "Open Sans", "Arial", sans-serif;;
+  font-family: "Open Sans", "Arial", sans-serif;
   font-size: 16px;
+  line-height: 22px;
+  color: #343434;
 }
