--- a/sass/style.scss
+++ b/sass/style.scss
@@ -10,3 +10,4 @@
 @import "blocks/main-nav.scss";
 @import "blocks/search-form.scss";
 @import "blocks/features.scss";
+@import "blocks/destinations.scss";
