--- a/sass/style.scss
+++ b/sass/style.scss
@@ -11,3 +11,4 @@
 @import "blocks/search-form.scss";
 @import "blocks/features.scss";
 @import "blocks/destinations.scss";
+@import "blocks/lease.scss";
