Добавляет разметку и стилизацию блока Popular

--- a/sass/blocks/button.scss
+++ b/sass/blocks/button.scss
@@ -47,7 +47,8 @@
   flex-grow: 1;
 }
 
-.button--destinations {
+.button--destinations,
+.button--popular {
   color: #343434;
   border: 1px solid #bdbdbd;
 
