--- a/sass/style.scss
+++ b/sass/style.scss
@@ -12,3 +12,4 @@
 @import "blocks/features.scss";
 @import "blocks/destinations.scss";
 @import "blocks/lease.scss";
+@import "blocks/popular.scss";
