Разметка и стилизация footer

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -13,3 +13,6 @@
 @import "blocks/destinations.scss";
 @import "blocks/lease.scss";
 @import "blocks/popular.scss";
+@import "blocks/main-footer.scss";
+@import "blocks/subscribe.scss";
+@import "blocks/social.scss";
