--- a/sass/blocks/button.scss
+++ b/sass/blocks/button.scss
@@ -39,7 +39,8 @@
   }
 }
 
-.button--search {
+.button--search,
+.button--subscribe{
   background-color: $accent-color;
   border: 1px solid $accent-color;
   border-bottom-left-radius: 0;
