--- a/sass/blocks/button.scss
+++ b/sass/blocks/button.scss
@@ -39,6 +39,24 @@
   }
 }
 
+.button--search {
+  position: relative;
+
+  &::before {
+    position: absolute;
+    content: "";
+    width: 17px;
+    height: 17px;
+    background-color: transparent;
+    left: 35px;
+    bottom: 20px;
+    background-image: url(../img/svg/icon-boat.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 17px 17px;
+  }
+}
+
 .button--search,
 .button--subscribe{
   background-color: $accent-color;
